# solana-GIM

./: .gitignore  Globals.d.ts  README.md  next.config.js  package-lock.json  package.json  tsconfig.json
components/: AgreementLayout.jsx  AgreementLayout.module.scss  Footer.js  Footer.module.scss  GimmickTileButton.jsx  GimmickTileButton.module.scss  Header.js  Header.module.scss  Icons.js  PrivacySection.jsx  SubModal.jsx  SubModal.module.scss
components/ConnectButton/: index.tsx
components/DICPunch/: DICPunchIcon.jsx  DICPunchIcon.module.scss  DICPunchInfo.jsx  DICPunchInfo.module.scss
components/Loader/: index.tsx  loader.module.scss
components/MetaplexModal/: index.tsx
components/episodes/: EpisodesContent.jsx  EpisodesContent.module.scss
contexts/: ConnectionContext.tsx  MintContext.tsx
contracts/: StonerCats.json
contracts/solana/programs/gimmicks/: Cargo.toml
contracts/solana/programs/gimmicks-cli/: Cargo.toml  package.json  tsconfig.json
contracts/solana/programs/gimmicks-cli/src/: db.cjs  find_transfers.ts  main.rs  mint-addresses.json
contracts/solana/programs/gimmicks/src/: lib.rs
contracts/solana/programs/gimmicks/tests/: smoke.rs
hooks/: conext-subscribeModal.js  useBreakpoint.jsx  useQuerySearch.tsx  wallet-context.jsx  wiki-context.js
pages/: _app.js  index.tsx  leaderboard.jsx  leaderboard.module.scss  privacy-agreement.jsx  profile.jsx  profile.module.scss  store.jsx  store.module.scss  terms-and-conditions.jsx  terms-privacy.module.scss  vote.module.scss  vote.tsx
server/: .env.sample  index.js  package.json
strapi/: ecosystems.config.js  package-lock.json  package.json
styles/: Home.module.scss  globals.scss  pagination.module.scss  variables.scss
utils/: api.js  common.tsx  ids.ts  transactions.ts
wallet/: connectMetamaskWallet.js  connectSolanaWallet.js  signSolana.js
(+85 files in other folders)
