[package]
name = "gimmicks-cli"
version = "0.0.1"
authors = [
    "Lawrence Wu <larry.wu@solana.com>",
]
keywords = ["solana"]
edition = "2018"
publish = false

[dependencies]
anchor-lang = "0.22.1"
anchor-spl = "0.22.1"
bs58 = "0.4.0"
chrono = "0.4.19"
clap = "2.33.3"
gimmicks = { path = "../gimmicks", features = ["no-entrypoint"] }
curl = "0.4.41"
futures = "0.3.18"
openssl = "0.10.38"
regex = "1.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-clap-utils = "=1.9.9"
solana-cli-config = "=1.9.9"
solana-client = "=1.9.9"
solana-logger = "=1.9.9"
solana-remote-wallet = "=1.9.9"
solana-sdk = "=1.9.9"
solana-transaction-status = "=1.9.9"
spl-associated-token-account = { version = "1.0.3", features = [ "no-entrypoint" ] }
spl-token = { version = "3.2.0", features = [ "no-entrypoint" ] }
tokio = { version = "1", features = ["full"] }


