[package]
name = "gimmicks"
version = "0.0.1"
authors = [ "Lawrence Wu <larry.wu@solana.com>" ]
keywords = ["solana"]
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "gimmicks"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
test-bpf = []

[dependencies]
anchor-lang = "0.22.1"
anchor-spl = "0.22.1"
bitvec = "1.0.0"
bytemuck = "1.8.0"
solana-program = "1.9.9"
spl-token = "3.2.0"
mpl-token-metadata = { version = "1.2.5", features = [ "no-entrypoint" ] }

[target.'cfg(not(target_arch = "bpf"))'.dependencies]
chrono = "0.4.19"

[dev-dependencies]
solana-program-test = "1.9.9"
solana-sdk = { version = "1.9.9", default-features = false }
spl-associated-token-account = { version = "1.0.3", features = [ "no-entrypoint" ] }
tokio = "1.17.0"
